--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bcc==0.1.10
 bcrypt==4.3.0
 blinker==1.9.0
 Django==5.2
+djangorestframework==3.16.1
 dotenv==0.9.9
 numpy==2.2.4
 psycopg2-binary==2.9.10
